src/objects/Email_Template_Master__c.object
<CustomObject>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <externalId>true</externalId>
        <label>Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Record_Type__c</fullName>
        <label>Object Record Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Object_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                    <default>true</default>
                    <label>AS</label>
                </value>
                <value>
                    <fullName>WR</fullName>
                </value>
                <value>
                    <fullName>E060</fullName>
                </value>
                <value>
                    <fullName>E080</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ER</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>OD</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>Other Notification</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>S9</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>E070</fullName>
                </value>
                <value>
                    <fullName>G060</fullName>
                </value>
                <value>
                    <fullName>G070</fullName>
                </value>
                <value>
                    <fullName>G080</fullName>
                </value>
                <value>
                    <fullName>Parent Order</fullName>
                </value>
                <value>
                    <fullName>Sub Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notification</fullName>
                    <default>true</default>
                    <label>Notification</label>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Email Template Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Business_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Object_Record_Type__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JO_Email_Template</fullName>
        <columns>Business_Name__c</columns>
        <columns>NAME</columns>
        <columns>Email_Template__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Object_Record_Type__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Email_Template_Master__c.JO_Email</value>
        </filters>
        <label>JO Email Template</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Template Masters</pluralLabel>
    <recordTypes>
        <fullName>JO_Email</fullName>
        <active>true</active>
        <label>JO Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permitting_Email</fullName>
        <active>true</active>
        <label>Permitting Email</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>